<resources>
    <string name="app_name">PremierLeagueNews</string>
    <string name="points">Pts</string>
    <string name="gd">GD</string>
    <string name="lose">L</string>
    <string name="pos">Pos</string>
    <string name="d">D</string>
    <string name="win">W</string>
    <string name="played">P</string>
    <string name="ranking">Premier League Standings</string>
    <string name="token">e66c32d50df447358ea63b34235dc8c3</string>
    <string name="setting">Setting</string>
</resources>
